Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54222

Demobrowser enters infinite loop on startup

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2
    • 5.6.1, 5.7.0
    • WebEngine
    • None
    • 7494836e3a1e61a000fa0f73f91665fa291ec287

    Description

      A fix in demobrowser moved the removal of expired history items to a signal handler.
      However, when starting the browser and loading the history, this signal handler is not yet created, causing an infinite loop in checkForExpired as the items are never removed from the list.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mibrunin Michael Bruning
            mibrunin Michael Bruning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes