Remove infinite loop when loading history.

Add a flag to let checkForExpired remove the entries directly.

Task-number: QTBUG-54222
Change-Id: Iddac9e50f645d74b95d0ea13ed76d7f858ddd137
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>