examples/webenginewidgets/demobrowser/history.h
@@ -116,7 +116,7 @@ public slots:
 
 private slots:
     void save();
-    void checkForExpired();
+    void checkForExpired(bool removeExpiredEntriesDirectly = false);
 
 protected:
     void addHistoryItem(const HistoryItem &item);
